Исп. замечания при смещении эл. из-за border

--- a/D1. Ресайз и перемещение/index.html
+++ b/D1. Ресайз и перемещение/index.html
@@ -9,6 +9,7 @@
 
 <body>
    <div class='elem' id="elem">
+      <img src="1.jpg" class="img" alt="Картинка моря">
       <div class="resize mid_top"></div>
       <div class="resize mid_bottom"></div>
       <div class="resize mid_left"></div>
